# volcon2D

./: .gitignore  .tags  .tags_sorted_by_file  CMakeLists.txt  LICENSE  vmcon2D.sublime-project  vmcon2D.sublime-workspace
GUI/: CMakeLists.txt  Camera2D.cpp  Camera2D.h  GL_function.cpp  GL_function.h  Window2D.cpp  Window2D.h
fem2D/: CMakeLists.txt  World.cpp  World.h
fem2D/Constraint/: AttachmentConstraint.cpp  AttachmentConstraint.h  Constraint.cpp  Constraint.h  ConstraintHeaders.h  CorotateFEMConstraint.cpp  CorotateFEMConstraint.h  FEMConstraint.cpp  FEMConstraint.h  HillTypeMuscleConstraint.cpp  HillTypeMuscleConstraint.h  LinearMuscleConstraint.cpp  LinearMuscleConstraint.h  MuscleConstraint.cpp  MuscleConstraint.h  PWLinearMuscleConstraint.cpp  PWLinearMuscleConstraint.h  SpringConstraint.h
fem2D/Deprecate/: HillTypeMuscleConstraint.h  NeoHookeanFEMConstraint.cpp  NeoHookeanFEMConstraint.h  PWLinearMuscleConstraint.h  SpringConstraint.cpp  SpringConstraint.h  TendonConstraint.cpp  TendonConstraint.h  VenantKirchhoffFEMConstraint.cpp  VenantKirchhoffFEMConstraint.h
fem2D/Mesh/: DiamondMesh.cpp  DiamondMesh.h  Mesh.h  MeshHeaders.h  OBJLoader.cpp  OBJLoader.h  RectangleMesh.cpp  RectangleMesh.h
fem_test/: FEM2D_Interface.cpp  FEM2D_Interface.h  Object.cpp  Object.h  SimulationWindow2D.cpp  SimulationWindow2D.h  main.cpp  muscleDirection.cpp
fem_test/export/: muscle.xml
octocon2D/: FEM2D_Interface.cpp  FEM2D_Interface.h  Octopus.cpp  Octopus.h  SimulationWindow2D.cpp  SimulationWindow2D.h  main.cpp
octocon2D/export/: muscle.xml
vmcon2D/: BallInfo.cpp  BallInfo.h  BezierCurve.cpp  BezierCurve.h  Controller.cpp  Controller.h  DART_Interface.cpp  DART_Interface.h  DDP.cpp  DDP.h  FEM2D_Interface.cpp  FEM2D_Interface.h  FSM.cpp  FSM.h  FSM_Interface.cpp  FSM_Interface.h  IKOptimization.cpp  IKOptimization.h  MuscleOptimization.cpp  MuscleOptimization.h  MusculoSkeletalSystem.cpp  MusculoSkeletalSystem.h  Record.cpp  Record.h  SimulationWindow2D.cpp  SimulationWindow2D.h  main.cpp  muscleDirection.cpp  muscleDirection.h
vmcon2D/DDP/: DDP.cpp  DDP.h  MusculoSkeletalDDP.cpp  MusculoSkeletalDDP.h  VelocityControlDDP.cpp  VelocityControlDDP.cpp_copy  VelocityControlDDP.h
vmcon2D/export/: juggling.xml  muscle_parameter (copy).xml  muscle_parameter.xml  muscle_parameter_2.xml  param.txt  target.txt
vmcon2D/export/motions/: LEFT_CATCH  LEFT_SWING  RIGHT_SWING  STAND
vmcon2D/export/motions (copy)/: LEFT_SWING  RIGHT_CATCH  RIGHT_SWING
vmcon2D/iLQR/: BoxQP.cpp  BoxQP.h  MusculoSkeletalLQR.cpp  MusculoSkeletalLQR.h  iLQR.cpp  iLQR.h
vmcon2D/iLQR/copy/: MusculoSkeletalDDP.cpp  MusculoSkeletalDDP.h  VelocityControlDDP.cpp  VelocityControlDDP.h  VelocityControlDDP.h_copy
